@@ -18,102 +18,14 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 import asyncio
-from pathlib import Path
 
 from dbus_next.constants import MessageType
 from libqtile import widget
 from libqtile.command.base import expose_command
 from libqtile.utils import _send_dbus_message
 
-from qtile_extras.popup.toolkit import PopupImage, PopupRelativeLayout, PopupSlider, PopupText
+from qtile_extras.popup.templates.mpris2 import DEFAULT_IMAGE, DEFAULT_LAYOUT
 from qtile_extras.widget.mixins import ExtendedPopupMixin
-
-IMAGES_FOLDER = Path(__file__).resolve() / ".." / ".." / "resources" / "media-icons"
-DEFAULT_IMAGE = (IMAGES_FOLDER / "default.png").resolve().as_posix()
-
-DEFAULT_LAYOUT = PopupRelativeLayout(
-    None,
-    width=400,
-    height=200,
-    controls=[
-        PopupText(
-            "",
-            name="title",
-            pos_x=0.35,
-            pos_y=0.1,
-            width=0.55,
-            height=0.14,
-            h_align="left",
-            v_align="top",
-        ),
-        PopupText(
-            "",
-            name="artist",
-            pos_x=0.35,
-            pos_y=0.24,
-            width=0.55,
-            height=0.14,
-            h_align="left",
-            v_align="middle",
-        ),
-        PopupText(
-            "",
-            name="album",
-            pos_x=0.35,
-            pos_y=0.38,
-            width=0.55,
-            height=0.14,
-            h_align="left",
-            v_align="bottom",
-        ),
-        PopupImage(
-            name="artwork",
-            filename=DEFAULT_IMAGE,
-            pos_x=0.1,
-            pos_y=0.1,
-            width=0.21,
-            height=0.42,
-        ),
-        PopupSlider(name="progress", pos_x=0.1, pos_y=0.6, width=0.8, height=0.1, marker_size=0),
-        PopupImage(
-            name="previous",
-            filename=(IMAGES_FOLDER / "previous.svg").resolve().as_posix(),
-            mask=True,
-            pos_y=0.8,
-            pos_x=0.125,
-            width=0.15,
-            height=0.1,
-        ),
-        PopupImage(
-            name="play_pause",
-            filename=(IMAGES_FOLDER / "play_pause.svg").resolve().as_posix(),
-            mask=True,
-            pos_y=0.8,
-            pos_x=0.325,
-            width=0.15,
-            height=0.1,
-        ),
-        PopupImage(
-            name="stop",
-            filename=(IMAGES_FOLDER / "stop.svg").resolve().as_posix(),
-            mask=True,
-            pos_y=0.8,
-            pos_x=0.525,
-            width=0.15,
-            height=0.1,
-        ),
-        PopupImage(
-            name="next",
-            filename=(IMAGES_FOLDER / "next.svg").resolve().as_posix(),
-            mask=True,
-            pos_y=0.8,
-            pos_x=0.725,
-            width=0.15,
-            height=0.1,
-        ),
-    ],
-    close_on_click=False,
-)
 
 
 def hms(time):
@@ -171,6 +83,32 @@ class Mpris2(widget.Mpris2, ExtendedPopupMixin):
 
     When shown, the controls can be selected using the mouse or keyboard navigation. The
     popup can be hidden by pressing <escape> or by calling the ``toggle_player`` command.
+
+    Two pre-defined layouts are currently provided and can be loadeded via:
+
+    .. code::
+
+        from qtile_extras import widget
+        from qtile_extras.popup.templates.mpris2 import COMPACT_LAYOUT, DEFAULT_LAYOUT
+
+        ...
+
+        # NB DEFAULT_LAYOUT is included by default and does not need to be imported in
+        # your config
+        widget.Mpris2(popup_layout=COMPACT_LAYOUT)
+
+    The layouts look like this:
+
+    .. list-table::
+
+        * - DEFAULT_LAYOUT
+          - |default|
+        * - COMPACT_LAYOUT
+          - |compact|
+
+    .. |default| image:: /_static/images/mpris_popup_default.png
+    .. |compact| image:: /_static/images/mpris_popup_compact.png
+
     """
 
     defaults = [
@@ -199,6 +137,10 @@ class Mpris2(widget.Mpris2, ExtendedPopupMixin):
         if task.exception():
             return
         bus, msg = task.result()
+
+        if bus:
+            bus.disconnect()
+
         result = msg.body[0]
 
         metadata = getattr(result.get("Metadata"), "value", dict())
